# multimodal-tugdt

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: example.yaml
data/: README.md
data/synthetic/: README.md  clinical.csv  participants.csv
docs/: audio_footswitch.md  capabilities.md  data_schema.md  dual_task_cost.md  feature_dictionary.md  imu_pipeline.md  modeling.md  pipeline_diagram.md  reproducibility.md  synchronization.md  video_pipeline.md
docs/example_outputs/: README.md  synthetic_research_summary.md
notebooks/: 01_synthetic_workflow.ipynb
scripts/: build_demo_notebook.py  build_readme_visual.py
src/multimodal_tugdt/: __init__.py  cli.py  config.py  logging_utils.py  pipeline.py  synthetic.py
src/multimodal_tugdt/features/: __init__.py  audio_features.py  dual_task_cost.py  footswitch_features.py  imu_features.py  video_features.py
src/multimodal_tugdt/fusion/: __init__.py  (+1 more)
tests/: test_audio_processing.py  test_baseline_modeling.py  test_cli.py  test_config.py  test_dual_task_cost.py  test_feature_fusion.py  test_footswitch_processing.py  test_imu_features.py  test_imu_loader.py  test_imu_preprocessing.py  test_manifest.py  test_milestone2_pipeline.py  test_milestone3_pipeline.py  test_milestone4_pipeline.py  test_milestone5_pipeline.py  test_milestone6_pipeline.py  test_milestone7_presentation.py  test_notebook_contract.py  test_research_report.py  test_segmentation.py  test_synchronization.py  test_synthetic.py  test_video_features.py  test_video_loader.py
(+26 files in other folders)
